[tool]

[tool.poetry]
name = "pysesame3"
version = "0.2.1"
homepage = "https://github.com/mochipon/pysesame3"
description = "Unofficial library to communicate with Sesame smart locks."
authors = ["Masaki Tagawa <masaki@tagawa.email>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "pysesame3" },
    { include = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

pycryptodome = { version = "3.10.1" }
requests = { version = "2.25.1" }

# docs
# should be a dev requirement, but for readthedocs to build must by a dependency
livereload = { version = "^2.6.3", optional = true }
mkdocs = { version = "^1.1.2", optional = true }
mkdocstrings = { version = "^0.13.6", optional = true }
mkdocs-autorefs = { version = "0.2.1", optional = true }
mkdocs-include-markdown-plugin = { version = "^1.0.0", optional = true }
mkdocs-material = { version = "^6.1.7", optional = true }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
bump2version = "1.0.1"
flake8 = "^3.8.4"
flake8-docstrings = "^1.6.0"
isort = "^5.7.0"
pre-commit = "^2.12.0"
pytest = "^6.2"
pytest-cov = "^2.10.1"
requests-mock = "^1.9.3"
tox = "^3.20.1"
twine = "^3.4.1"

[tool.poetry.extras]
doc = [
    "livereload",
    "mkdocs",
    "mkdocstrings",
    "mkdocs-autorefs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
