[tool]

[tool.poetry]
name = "pysesame3"
version = "0.5.0-rc.1"
homepage = "https://github.com/mochipon/pysesame3"
description = "Unofficial library to communicate with Sesame smart locks."
authors = ["Masaki Tagawa <masaki@tagawa.email>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "pysesame3" },
    { include = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"

typing-extensions = { version = "^3.10.0.0", python = "<3.8" }
importlib-metadata = {version = "^1.0", python = "<3.8"}

pycryptodome = { version = "^3.10.1" }
requests = { version = "^2.25.1" }

awsiotsdk = { version = "^1.6.1", optional = true }
boto3 = { version = "^1.17.94", optional = true }
certifi = { version = "*", optional = true }
requests-aws4auth = { version = "^1.1.1", optional = true }

# docs
# should be a dev requirement, but for readthedocs to build must by a dependency
livereload = { version = "^2.6.3", optional = true }
mkdocs = { version = "^1.1.2", optional = true }
mkdocstrings = { version = "^0.15.0", optional = true }
mkdocs-autorefs = { version = "^0.2.1", optional = true }
mkdocs-include-markdown-plugin = { version = "^3.1.3", optional = true }
mkdocs-material = { version = "^7.1.8", optional = true }

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
bump2version = "^1.0.1"
moto = {extras = ["cognito-identity"], version = "^2.0.9"}
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
requests-mock = "^1.9.3"

[tool.poetry.extras]
doc = [
    "livereload",
    "mkdocs",
    "mkdocstrings",
    "mkdocs-autorefs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material"
]
cognito = [
    "awsiotsdk",
    "boto3",
    "certifi",
    "requests-aws4auth"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
