[tool]

[tool.poetry]
name = "pysesame3"
version = "0.6.0-rc.1"
homepage = "https://github.com/mochipon/pysesame3"
description = "Unofficial library to communicate with Sesame smart locks."
authors = ["Masaki Tagawa <masaki@tagawa.email>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "pysesame3" },
    { include = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

typing-extensions = { version = "^4.2.0", python = "<3.8" }
importlib-metadata = {version = "^4.11.4", python = "<3.8"}

pycryptodome = { version = "^3.14.1" }
requests = { version = "^2.27.1" }

awsiotsdk = { version = "^1.11.1", optional = true }
boto3 = { version = "^1.23.6", optional = true }
certifi = { version = "*", optional = true }
requests-aws4auth = { version = "^1.1.2", optional = true }

# docs
# should be a dev requirement, but for readthedocs to build must by a dependency
livereload = { version = "^2.6.3", optional = true }
mkdocs = { version = "^1.3.0", optional = true }
mkdocstrings = { version = "^0.18.1", optional = true }
mkdocstrings-python = { version = "^0.6.6", optional = true}
mkdocs-autorefs = { version = "^0.4.1", optional = true }
mkdocs-include-markdown-plugin = { version = "^3.5.0", optional = true }
mkdocs-material = { version = "^8.2.15", optional = true }

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
bump2version = "^1.0.1"
moto = {extras = ["cognito-identity"], version = "^3.1.10"}
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"

[tool.poetry.extras]
doc = [
    "livereload",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-autorefs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material"
]
cognito = [
    "awsiotsdk",
    "boto3",
    "certifi",
    "requests-aws4auth"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
